--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
  <meta charset="UTF-8">
  <title>Мой первый сайт</title>
+ <title>Мой первый сайт</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <header>
